index.scss: fix select text in dark mode

--- a/src/styles/index.scss
+++ b/src/styles/index.scss
@@ -56,4 +56,7 @@ p {
   @include light-theme;
 }
 
+option, select {
+  @apply text-black;
+}
 
